feat: js file linked

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <input type="date" name="bday" id="birthday">
     <button id="btn-check">Check</button>
+    <script src="index.js"></script>
 </body>
 </html>
