feat: showNext btn created

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <input type="date" name="bday" id="birthday">
     <button id="btn-check">Check</button>
-    <script src="index.js"></script>
+    <button id="btn-showNextDate">Show</button>
+    <script src="index.js"></script>   
 </body>
 </html>
