create: html structuring

--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="date" name="bday" id="birthday">
-    <button id="btn-check">Check</button>
-    <button id="btn-showNextDate">Show</button>
+    <header>
+        <h1>Palindrome Bday</h1>
+        <p>Enter your birthdate to check if it's palindrome or not.</p>
+    </header>
+    <main>
+        <div class="container">
+            <input type="date" name="bday" id="birthday">
+            <button id="btn-check">Check</button>
+        </div>
+        <div class="container">
+            <p id="output1"></p>
+        </div>
+        <div class="container">
+            <button id="btn-showNextDate">Show</button>
+        </div>
+        <div class="container">
+            <p id="output2"></p>
+        </div>
+    </main>
     <script src="index.js"></script>   
 </body>
 </html>
