--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Palindrome Bday</h1>
-        <p>Enter your birthdate to check if it's palindrome or not.</p>
+        <p id="intro">Enter your birthdate to check if it's palindrome or not.</p>
     </header>
     <main>
         <div class="container">
@@ -18,9 +18,10 @@
             <button id="btn-check">Check</button>
         </div>
         <div class="container">
-            <p id="output1"></p>
+            <h4 id="output1"></h4>
         </div>
         <div class="container">
+            <p id="msg">Want to know the nearest palindrome date from your birthdate ?</p>
             <button id="btn-showNextDate">Show</button>
         </div>
         <div class="container">
