feat: #instruction added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <header>
         <h1>Palindrome B-day🎂</h1>
-        <p id="intro">Enter your birthdate to check if it's palindrome or not.</p>
+        
+        <p id="instruction">
+            This app checks if your birthdate is  palindrome or not in 6 formats yyyy-mm-dd, dd-mm-yyyy, mm-dd-yyyy, dd-mm-yy, mm-dd-yy , yy-mm-dd.
+        </p>
+        <p id="intro">Enter your birthdate </p>
     </header>
     <main>
         <div class="container">
@@ -28,6 +32,9 @@
             <p id="output2">The next palindrome date is <span id="output-date"></span>, missed by <span id="count"></span> days</p>
         </div>
     </main>
+    <footer>
+
+    </footer>
     <script src="index.js"></script>   
 </body>
 </html>
