--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <p id="output1"></p>
         </div>
-        <div class="container">
+        <div class="container" id="section1">
             <p id="msg">Want to know the nearest palindrome date from your birthdate ?</p>
             <button id="btn-showNextDate">Show</button>
         </div>
@@ -33,7 +33,7 @@
         </div>
     </main>
     <footer>
-
+        <p>Build with <span id="heart">❤</span> by <a href='https://github.com/sush1998'>Sushant Mahalle</a></p>
     </footer>
     <script src="index.js"></script>   
 </body>
