feat: empty input validation and #err

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="container">
             <input type="date" name="bday" id="birthday" required>
             <button id="btn-check">Check</button>
+            <p id="error">Please enter date !!</p>
         </div>
         <div class="container">
             <p id="output1"></p>
@@ -29,7 +30,7 @@
             <button id="btn-showNextDate">Show</button>
         </div>
         <div class="container">
-            <p id="output2">The next palindrome date is <span id="output-date"></span>, missed by <span id="count"></span> days</p>
+            <p id="output2">The nearest palindrome date is <span id="output-date"></span>, missed by <span id="count"></span> days</p>
         </div>
     </main>
     <footer>
